<resources>
    <string name="app_name" translatable="false">CoolWeatherApp</string>
    <string name="longitude">Longitude</string>
    <string name="min_temperature" translatable="false">Min %1$s</string>
    <string name="max_temperature" translatable="false">Max %1$s</string>
    <string name="button">Update</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="lisbon_lat" translatable="false">38.7167</string>
    <string name="lisbon_long" translatable="false">-9.1333</string>
    <string name="latitude">Latitude</string>
    <string name="prec_prob">Precipitation Probability</string>
</resources>