<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/textBck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_square" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textBck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/latitude"
        app:layout_constraintBottom_toBottomOf="@+id/latitude_text"
        app:layout_constraintStart_toStartOf="@+id/textBck"
        app:layout_constraintTop_toTopOf="@+id/latitude_text" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/longitude"
        app:layout_constraintBottom_toBottomOf="@+id/longitude_text"
        app:layout_constraintStart_toStartOf="@+id/latitude_label"
        app:layout_constraintTop_toTopOf="@+id/longitude_text" />

    <TextView
        android:id="@+id/temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/temperature"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/temperature_text"
        app:layout_constraintStart_toStartOf="@+id/latitude_label"
        app:layout_constraintTop_toTopOf="@+id/temperature_text" />

    <TextView
        android:id="@+id/windspeed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/wind_speed"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/windspeed_text"
        app:layout_constraintStart_toStartOf="@+id/latitude_label"
        app:layout_constraintTop_toTopOf="@+id/windspeed_text" />

    <EditText
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/lisbon_lat"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/textBck"
        app:layout_constraintTop_toTopOf="@+id/textBck" />

    <EditText
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/lisbon_long"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/latitude_text"
        app:layout_constraintTop_toBottomOf="@+id/latitude_text" />

    <EditText
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/longitude_text"
        app:layout_constraintTop_toBottomOf="@+id/longitude_text" />

    <EditText
        android:id="@+id/windspeed_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/temperature_text"
        app:layout_constraintTop_toBottomOf="@+id/temperature_text" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBck" />

</androidx.constraintlayout.widget.ConstraintLayout>